# collab-environment

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .gitmodules  1. TrainBasicGNN.ipynb  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES_AND_LICENSES.txt  Dockerfile  Dockerfile.gnn  INTERACTION_PARTICLES_2D_UPDATE.md  INTERACTION_PARTICLES_FINAL.md  INTERACTION_PARTICLES_SUMMARY.md  Makefile  PRD_simulation_viewer.md  README.rst  TESTING_SAFETY_README.md  align_videos_manually.py  data  env.yml  full_pipeline.ipynb  paper_figures.md  pyproject.toml  register_simulations.sh  requirements-db.txt  requirements.txt  run_training.sh  setup.py  setup.sh  test_explainability.sh  test_video_bbox_final.py  video_overlay_webapp.py
.github/workflows/: lint.yml  lint_notebooks.yml  test.yml  test_notebooks.yml
collab_env/: __init__.py
collab_env/alignment/: align.ipynb  align.py  reprojection.ipynb  reprojection.py  test_align_rgb.ipynb
collab_env/dashboard/: __init__.py  analysis_widgets.yaml  app.py  cli.py  dashboard_app.py  file_viewers.py  persistent_video_server.py  rclone_client.py  session_manager.py  spatial_analysis_app.py  spatial_analysis_gui.py  video_bbox_viewer_iframe.py  video_bbox_viewer_working.py
collab_env/data/: README.rst  file_utils.py  gcs_utils.py
collab_env/geometry/: spheres.py
collab_env/gnn/: GNNReadMe.md  README.md  README_NRI_CLEAN.md  README_explainability.md  analysis_utils.py  analyze_results.py  build_dataset.py  convert_3d_sim_to_gnn.py  example_usage.py  explain_gnn_integrated_gradients.py  feature.py  gnn.py  gnn_definition.py  gnn_enhanced.py  gnn_feature_importance_explainer.py  gnn_models.py  nri_main.py  nri_model.py  nri_modules.py  nri_training.py  nri_visualization.py  plot_helpers.py  plotting_utility.py  requirements_gnn.txt  run_graphgym_experiments.py  test_explainability.py  train.py  train_3DGNN.py  train_cli.py  train_gnn_optuna.py  train_gnn_simple.py  train_maximize_gpu.py  utility.py
docs/: paper_figures.md
environment/: env.py  splat.py  utils.py
meshes/: alignment.npz
schema/: 01_core_tables.sql  02_extended_properties.sql  03_seed_data.sql  04_views_examples.sql  README.md
scripts/: CSQ_reader.py  clean.sh  convert_bulk.py  dev_dashboard.sh  gnn_retrain.sh  lint.sh  lint_notebooks.sh  test.sh  test_notebooks.sh
simulated_data/: boid_food_basic_alignment.pt  boid_food_basic_alignment_config.pt  boid_food_basic_independent_config.pt  boid_food_strong_config.pt  boid_single_species_basic.pt  boid_single_species_basic_config.pt  boid_single_species_high_cluster_high_speed.pt  boid_single_species_high_cluster_high_speed_config.pt  boid_single_species_independent_config.pt  boid_single_species_noisy.pt  boid_single_species_noisy_config.pt  boid_single_species_short.pt  boid_single_species_short_config.pt  boid_single_species_strong_alignment_config.pt  boid_single_species_weak_alignment_config.pt
tests/: conftest.py  gnn_shape.py  gnn_utility_function_test.py  sim_test_1.py  sim_test_1_config.yaml  sim_test_1_wth_vis_config.yaml  sim_test_2.py  sim_test_2_config.yaml  sim_test_3.py  sim_test_3_config.yaml  sim_test_builder.py  sim_test_config.yaml  sim_test_consistent_config.yaml  sim_test_time_steps_multi_episode_config.yaml  sim_test_util.py  sim_test_vis_no_scene_config.yaml  test_dashboard.py  test_gcs.py  test_gnn_consistency.py  test_gym.py  test_output_consistency.py  test_output_files.py  test_sim_1.py  test_sim_1_with_visualizer.py  test_sim_2.py  test_sim_output_consistency.py  test_sim_time_steps_multi_episode.py  test_sim_vis_with_no_scene.py  test_tracking_pipeline.py
tlb-building/: size_depth_tests.ipynb
tracking/: full_pipeline.ipynb
trained_models/: boid_single_species_basic_nonlinearfeature_lazy_position.pt  boid_single_species_basic_nonlinearfeature_lazy_position_shortdata.pt  boid_single_species_basic_nonlinearfeature_vpluspplus_a_position.pt  boid_single_species_basic_nonlinearfeature_vpluspplus_a_position_shortdata.pt  boid_single_species_basic_vpluspplus_a_noise_0.001.pt  boid_single_species_basic_vpluspplus_a_noise_0.001_train_spec.pkl  boid_single_species_basic_vpluspplus_a_noise_0.pt  boid_single_species_basic_vpluspplus_a_noise_0_model_spec.pkl  boid_single_species_basic_vpluspplus_a_noise_0_train_spec.pkl  boid_single_species_lazy_basic_noise_0.001_specialframes.pt  boid_single_species_lazy_basic_special_frames.pt  boid_single_species_short_lazy_position.pt  boid_single_species_short_vpluspplus_a_position.pt  boid_single_species_vpluspplus_a_basic_all_frames.pt  boid_single_species_vpluspplus_a_basic_noise_0.001_specialframes.pt
(+256 files in other folders)
