[project]
name = "collab_env"
version = "0.0.1"
description = "Basic scientific computing and deep learning environment with CUDA support"
readme = "README.rst"
requires-python = ">=3.8,<3.11"
license = { text = "Apache-2.0" }
keywords = ["scientific computing", "deep learning", "CUDA", "data processing", "plotting"]
authors = [{ name = "Basis" }]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10"
]

dependencies = [
  "torch>=2.1,<2.4",
  "torchvision",
  "pyro-ppl",
  "numpy<2",
  "pandas",
  "scipy",
  "scikit-learn",
  "opencv-python",
  "tqdm",
  "pyyaml",
  "pyexiftool",
  "matplotlib",
  "seaborn",
  "plotly",
  "ultralytics",
  "dotenv",
  "jupyterlab", 
  "ipywidgets",
  "gcsfs",
  "loguru",
  "pylibjpeg-libjpeg",
  "rfdetr",
  "open3d",
  "gymnasium",
  "torch_geometric",
  "ipympl",
  "pyarrow",
  "pycolmap",
  "pyvista",
  "trame",
  "trame-vtk",
  "trame-vuetify",
  "lpips",
  "scikit-image",
  "panel",
  "param",
  "rich",
  "pyarrow",
  "types-PyYAML",
  "starbars",
  "rich",
]

[tool.setuptools]                         # NEW
packages = [
    "collab_env.alignment",
    "collab_env.dashboard", 
    "collab_env.data",
    "collab_env.gnn",
    "collab_env.sim",
    "collab_env.sim.boids",
    "collab_env.sim.boids_gnn_temp",
    "collab_env.sim.gymnasium_env",
    "collab_env.sim.util",
    "collab_env.tracking",
    "collab_env.tracking.model",
    "collab_env.utils"
]  

[project.optional-dependencies]
docs = [
  "setuptools",
  "sphinx",
  "sphinxcontrib-bibtex",
  "sphinx_rtd_theme",
  "myst-parser",
  "nbsphinx",
]
dev = [
  "setuptools",
  "sphinx",
  "sphinxcontrib-bibtex",
  "sphinx_rtd_theme",
  "myst-parser",
  "nbsphinx",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-benchmark",
  "mypy==1.18.2",
  "mypy-extensions==1.1.0",
  "ruff",
  "nbval",
  "nbqa",
  "black",
  "isort",
  "flake8>=6.0",
  "types-PyYAML",
  "types-requests",
]

[build-system]
requires = ["setuptools<70.0"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E501"]
exclude = [".venv"]

[tool.nbqa.addopts]
flake8 = [
    "--extend-ignore=E203,E501"
]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
exclude = "build"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["./tests"]

[tool.isort]
profile = "black"
skip_gitignore = true
